cf-stacks/nat-gateway.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  Provision nat gateway for private subnets

Parameters:
  ProjectName:
    Description: Specify the name of the project
    Type: String
    Default: DCA
  Environment:
    Description: Specify the environment in use
    Type: String
    Default: Dev

Resources:
  NatGateway1EIP:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-NatGateway1EIP

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId:
        Fn::ImportValue: !Sub ${ProjectName}-${Environment}-PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-NatGateway1

  DataGatewayRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
      RouteTableId:
        Fn::ImportValue: !Sub ${ProjectName}-${Environment}-DataRT1ID

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-NatGateway2EIP

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId:
        Fn::ImportValue: !Sub ${ProjectName}-${Environment}-PublicSubnet2
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-NatGateway2

  DataGatewayRoute2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
      RouteTableId:
        Fn::ImportValue: !Sub ${ProjectName}-${Environment}-DataRT2ID
